journalpump 2.1.3 (unreleased)
==============================
* Use atomic replacement when overwriting previous state file

journalpump 2.1.2 (2019-10-11)
==============================
* Report sender health in jsonpump_state.json
* Added limited rsyslog custom log format support
* Use /<index>/_bulk instead of /_bulk for sending to Elasticsearch

journalpump 2.1.0 (2019-04-09)
==============================
* Support for multiple journal readers with separate configuration for each
* Multiple send destinations per reader
* Reader flags can be specified to for example read the "system" journal
* Add rsyslog sender as an output

journalpump 2.0.0 (2017-02-13)
============================

* Rename kafkajournalpump to just journalpump
* Refactor journalpump to be able to support other outputs than Kafka
* Add Logplex sender as an output
* Add Elasticsearch sender as an output
* telegraf statsd support including support for searches
* Require Python 3.4 or newer
* Various robustness improvements
* Update journalpump to support kafka-python 1.x.x+

kafkajournalpump 1.0.1 (2015-08-03)
===================================

* Make the code pep8 compliant
* Support py2.x again
* bugfix for matching logic

kafkajournalpump 1.0.0 (2015-07-27)
===================================

* Initial release
* Support for pumping messages from a local journald to a Kafka server
* Support for only sending matching messages